test/tests/integration/helpers/fail/messageId.js
//TODO Add message id fail tests
const messageIdFailTest = () => {};

module.exports = {
  messageIdFailTest,
};
